@@ -23,17 +23,17 @@ public class FileController {
     @Value("${custom.uploadDirPath}")  // 예: "C:/프로젝트경로/uploadFiles/"
     private String uploadDirPath;
 
-    @Autowired
-    private ResourceLoader resourceLoader;
 
     // ✅ 1. 일반 파일 업로드
     @PostMapping("/upload")
     @ResponseBody
     public Map<String, Object> uploadFiles(@RequestParam("files") MultipartFile[] files) {
+        // ✅ 결과 변수 누락되었던 부분 추가!
         Map<String, Object> result = new HashMap<>();
         List<Map<String, String>> uploadedFiles = new ArrayList<>();
 
-        File dir = new File(uploadDirPath);
+        // ✅ 정확한 경로로 디렉토리 지정
+        File dir = new File(uploadDirPath); // 예: static/uploadFiles
         if (!dir.exists()) dir.mkdirs();
 
         for (MultipartFile file : files) {
@@ -41,22 +41,20 @@ public class FileController {
             String uuid = UUID.randomUUID().toString();
             String savedName = uuid + "_" + originalName;
 
-            File destFile = new File(dir, savedName);
+            File destFile = new File(dir, savedName); // ✅ 저장 경로 확인용 로그
+            System.out.println("[DEBUG] uploadDirPath = " + uploadDirPath);
+            System.out.println("[DEBUG] 저장 경로: " + destFile.getAbsolutePath());
 
             try {
                 file.transferTo(destFile);
 
-                // com.example.demo.vo.Resource 인스턴스 생성
-                com.example.demo.vo.Resource resourceVo = new com.example.demo.vo.Resource();
-                resourceVo.setOriginalName(originalName);
-                resourceVo.setSavedName(savedName);
 
                 Map<String, String> fileInfo = new HashMap<>();
                 fileInfo.put("savedPath", savedName);
                 fileInfo.put("originalName", originalName);
                 uploadedFiles.add(fileInfo);
 
-                // 필요 시 DB 저장 등 추가 작업
+                // 📌 필요 시 DB 저장 로직 여기에 추가 가능
 
             } catch (IOException e) {
                 e.printStackTrace();
@@ -71,7 +69,8 @@ public class FileController {
 
     @GetMapping("/download")
     public void downloadFile(@RequestParam String path, @RequestParam String original, HttpServletResponse response) throws IOException {
-        File file = new File(uploadDirPath, path);
+        // 경로 포함된 savedName 기준으로 처리
+        File file = new File(uploadDirPath, path);  // path 예: "auto/시험문제.pdf" 또는 "자료1.pdf"
 
         if (!file.exists() || !file.isFile() || !file.canRead()) {
             response.sendError(HttpServletResponse.SC_NOT_FOUND, "파일을 찾을 수 없거나 읽을 수 없습니다.");
@@ -79,7 +78,7 @@ public class FileController {
         }
 
         response.setContentType("application/octet-stream");
-        response.setHeader("Content-Disposition", "attachment; filename=\"" + URLEncoder.encode(original, "UTF-8") + "\"");
+        response.setHeader("Content-Disposition", "attachment; filename=\"" + URLEncoder.encode(original, StandardCharsets.UTF_8) + "\"");
         response.setHeader("Content-Length", String.valueOf(file.length()));
 
         try (InputStream is = new FileInputStream(file);
